Removed duplicate difficulty classes in quesiton-box css, fixed alignment for question description box upper half

--- a/peer-prep-fe/src/components/question-box/question-box.component.css
+++ b/peer-prep-fe/src/components/question-box/question-box.component.css
@@ -43,25 +43,3 @@
   border: transparent;
   cursor: pointer;
 }
-
-.difficulty {
-  padding: 8px 12px;
-  border-radius: 15px;
-  font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
-}
-
-.difficulty.Easy {
-  background-color: #159200;
-  color: white;
-}
-
-.difficulty.Medium {
-  background-color: #cec600;
-  color: white;
-}
-
-.difficulty.Hard {
-  background-color: #a80000;
-  color: white;
-}
