--- a/peer-prep-fe/src/components/question-description/question-description.component.css
+++ b/peer-prep-fe/src/components/question-description/question-description.component.css
@@ -25,3 +25,11 @@
   gap: 10px;
   flex-wrap: wrap;
 }
+
+.upper-half {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  gap: 15px;
+}
